# pyFunc-Agent

./: README.md  pyproject.toml
examples/: adding_agent01.py  adding_agent02.py  modular_agent04.py  multitool_agent02.py  react_agent05.py  streamlit_agent03.py
src/pyfunc_agent/: __init__.py  agent_attributes.py  simple_agents.py  tools.py  utils.py
src/pyfunc_agent/prompts/: calc_bot.json  calc_bot.yaml  fizban.json  fizban.yaml  react_bot.yaml
